# nrf9160-feather-examples-and-drivers

./: .gitignore  CMakeLists.txt  Changelog.txt  Kconfig  README.md  west.yml
.github/: FUNDING.yml
.github/workflows/: build.yml  tests.yml
boards/arm/cd_test_board/: Kconfig.board  Kconfig.defconfig  board.cmake  cd_test_board.dts  cd_test_board.yaml  cd_test_board_defconfig
docs/: doxygen.config
drivers/: CMakeLists.txt  Kconfig
drivers/battery/: CMakeLists.txt  Kconfig  battery.c  battery.h
drivers/rtc/: CMakeLists.txt  Kconfig
drivers/rtc/pcf85063a/: CMakeLists.txt  Kconfig  pcf85063a.c  pcf85063a.h
include/lib/codec/: example_json_codec.h
lib/: CMakeLists.txt  Kconfig
lib/codec/: CMakeLists.txt  Kconfig  example_json_codec.c
patch/: mcuboot.diff
samples/accelerometer/: CMakeLists.txt  Readme.md  prj.conf
samples/accelerometer/boards/: circuitdojo_feather_nrf9160_ns.overlay  circuitdojo_feather_nrf9160ns.overlay
samples/accelerometer/src/: main.c
samples/accelerometer_zbus/: Readme.md  prj.conf
samples/accelerometer_zbus/boards/: circuitdojo_feather_nrf9160_ns.overlay
samples/accelerometer_zbus/include/: sensor.h
samples/accelerometer_zbus/src/: main.c  sensor.c
samples/active_sleep/: CMakeLists.txt  Readme.md  prj.conf
samples/active_sleep/boards/: circuitdojo_feather_nrf9160_ns.overlay  circuitdojo_feather_nrf9160ns.overlay
samples/active_sleep/child_image/: spm.conf
samples/active_sleep/child_image/mcuboot/boards/: circuitdojo_feather_nrf9160.overlay
samples/active_sleep/patch/: lis2dh.diff
samples/active_sleep/src/: main.c
samples/at_client/: CMakeLists.txt  README.rst  prj.conf
samples/at_client/boards/: circuitdojo_feather_nrf9160_ns.overlay
samples/battery/: CMakeLists.txt  prj.conf
samples/battery/src/: battery.c  battery.h  main.c
samples/blinky/: CMakeLists.txt
samples/blinky/src/: main.c
samples/bme280/: CMakeLists.txt  prj.conf
samples/bme280/boards/: circuitdojo_feather_nrf9160ns.overlay
samples/bme280/src/: main.c
samples/button/: CMakeLists.txt  prj.conf
samples/button/src/: main.c
samples/deep_sleep/: CMakeLists.txt  prj.conf
samples/deep_sleep/boards/: circuitdojo_feather_nrf9160_ns.overlay
samples/deep_sleep/src/: main.c
samples/direct_i2c_access/: prj.conf
samples/direct_i2c_access/src/: main.c
samples/external_flash/: CMakeLists.txt  pm_static.yml  prj.conf
samples/external_flash/boards/: circuitdojo_feather_nrf9160_ns.overlay  circuitdojo_feather_nrf9160ns.overlay
samples/external_flash/src/: main.c
samples/external_rtc/: CMakeLists.txt  prj.conf
samples/external_rtc/boards/: circuitdojo_feather_nrf9160_ns.overlay
samples/external_rtc/src/: main.c
samples/external_rtc_time_sync/: CMakeLists.txt  prj.conf
samples/external_rtc_time_sync/boards/: circuitdojo_feather_nrf9160_ns.overlay
samples/external_rtc_time_sync/src/: main.c
samples/gps/: CMakeLists.txt  prj.conf
samples/gps/boards/: circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160ns.conf
samples/gps/src/: main.c  startup.c
samples/https/: .gitignore  CMakeLists.txt  Kconfig  prj.conf
samples/https/boards/: circuitdojo_feather_nrf9160_ns.conf
samples/https/src/: main.c
samples/led_pwm/: prj.conf
samples/led_pwm/boards/: particle_xenon.overlay
samples/led_pwm/src/: main.c
samples/mfw_update/: CMakeLists.txt  Readme.md  prj.conf  requirements.txt
samples/mfw_update/boards/: circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay
samples/nanopb/: CMakeLists.txt  Readme.md  prj.conf
samples/nanopb/boards/: circuitdojo_feather_nrf9160_ns.conf
samples/nanopb/src/: main.c
samples/sms/: CMakeLists.txt  prj.conf
samples/sms/src/: main.c
samples/tracker/: .gitignore  CMakeLists.txt  Kconfig  LICENSE  Readme.md  prj.conf
samples/tracker/boards/: circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay  circuitdojo_feather_nrf9160ns.conf  circuitdojo_feather_nrf9160ns.overlay  sparkfun_thing_plus_nrf9160_ns.conf  sparkfun_thing_plus_nrf9160_ns.overlay  thingy91_nrf9160ns.conf
samples/tracker/conf/: backend.conf  debug.conf  golioth.conf  prj.conf  release.conf
samples/tracker/conf/backend/: aws.conf  pyrinas.conf
samples/tracker/conf/backends/: golioth.conf  pyrinas.conf
samples/tracker/conf/mcuboot/: mcuboot.conf
samples/tracker/dts/bindings/: circuitdojo,psctl.yaml
samples/tracker/lib/: CMakeLists.txt
samples/tracker/patch/: zephyr.diff
samples/tracker/src/: main.c
samples/tracker/src/backend/: CMakeLists.txt  app_backend.h  golioth.c  pyrinas.c
samples/tracker/src/battery/: CMakeLists.txt  app_battery.c  app_battery.h
samples/tracker/src/boards/: CMakeLists.txt
samples/tracker/src/boards/circuitdojo_feather_nrf9160ns/: fs.c
samples/tracker/src/cloud/: CMakeLists.txt  pyrinas_cloud_integration.c
samples/tracker/src/cloud/cloud_codec/: CMakeLists.txt
samples/tracker/src/codec/: CMakeLists.txt  app_codec.c  app_codec.h
samples/tracker/src/event_manager/: CMakeLists.txt  app_event_manager.c  app_event_manager.h
samples/tracker/src/ext_sensors/: Kconfig  ext_sensors.c
samples/tracker/src/gps/: CMakeLists.txt  Kconfig  app_gps.c  app_gps.h
samples/tracker/src/indication/: CMakeLists.txt  app_indication.c  app_indication.h
samples/tracker/src/modem/: CMakeLists.txt  app_modem.c
samples/tracker/src/modules/: CMakeLists.txt  Kconfig.sensor_module  data_module.c  modem_module.c  sensor_module.c
samples/tracker/src/motion/: CMakeLists.txt  app_motion.c  app_motion.h
samples/tracker/src/shell/: CMakeLists.txt  Kconfig  app_at_shell.c
samples/tracker/src/storage/: CMakeLists.txt  Kconfig  app_storage.c
samples/tracker/src/version/: Kconfig
scripts/: build_all.sh
tests/codec/: CMakeLists.txt  prj.conf  testcase.yaml
tests/codec/src/: main.c
tests/example/: Readme.md  testcase.yaml
tests/example/src/: main.c
tests/random/: prj.conf  testcase.yaml
tests/random/boards/: circuitdojo_feather_nrf9160_ns.conf
tests/random/src/: main.c
zephyr/: module.yml
(+5 files in other folders)
